<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="0dp"
    android:layout_marginTop="0dp"
    android:layout_marginRight="0dp"
    android:layout_marginBottom="0dp"
    android:orientation="vertical"
    android:padding="0dp">

    <include layout="@layout/toolbar" />

    <include
        layout="@layout/toolbar_action_bar_shadow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar" />


    <ProgressBar
        android:id="@+id/circularProgressBar"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        android:layout_centerInParent="true"
        android:outlineAmbientShadowColor="@color/colorPrimary"
        android:outlineSpotShadowColor="@color/colorPrimary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/parentHome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:orientation="vertical"
        android:visibility="visible"
        android:weightSum="13.2">

        <!--Weight 1-->


        <!--Weight 8-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:layout_marginTop="32dp"
            android:paddingTop="16dp">

            <RelativeLayout
                android:id="@+id/parent_of_fill_forms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/center_divider"
                android:layout_alignParentTop="true"
                android:baselineAligned="false">

                <LinearLayout
                    android:id="@+id/fill_forms"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_margin="16dp"
                    android:layout_toStartOf="@id/center_divider_inner_top"
                    android:layout_toLeftOf="@id/center_divider_inner_top"
                    android:background="@drawable/linear_layout_shadow"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:padding="10dp"
                        android:src="@drawable/inspect_school"
                        android:tint="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/submitted_forms_text"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1.5"
                        android:gravity="center"
                        android:text="@string/fill_forms"
                        android:layout_marginBottom="3dp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="13sp" />

                </LinearLayout>

                <View
                    android:id="@+id/center_divider_inner_top"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true" />

                <LinearLayout
                    android:id="@+id/view_submitted_forms"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_margin="16dp"
                    android:layout_toEndOf="@id/center_divider_inner_top"
                    android:layout_toRightOf="@id/center_divider_inner_top"
                    android:background="@drawable/linear_layout_shadow"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:padding="10dp"
                        android:src="@drawable/view_filled_forms"
                        android:tint="@color/colorPrimary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1.5"
                        android:gravity="center"
                        android:text="@string/view_issues"
                        android:layout_marginBottom="3dp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="13sp"
                        android:textStyle="normal" />


                </LinearLayout>

            </RelativeLayout>

            <View
                android:id="@+id/center_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerInParent="true" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/center_divider"
                android:layout_alignParentBottom="true"
                android:baselineAligned="false">

                <LinearLayout
                    android:id="@+id/submit_forms"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_margin="16dp"
                    android:layout_toStartOf="@id/center_divider_inner_bottom"
                    android:layout_toLeftOf="@id/center_divider_inner_bottom"
                    android:background="@drawable/linear_layout_shadow"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:padding="10dp"
                        android:src="@drawable/submit_form"
                        android:tint="@color/colorPrimary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1.5"
                        android:gravity="center"
                        android:text="Sync Forms"
                        android:layout_marginBottom="3dp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="13sp" />

                </LinearLayout>

                <View
                    android:id="@+id/center_divider_inner_bottom"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true" />

                <LinearLayout
                    android:id="@+id/need_help"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_margin="16dp"
                    android:layout_toEndOf="@id/center_divider_inner_bottom"
                    android:layout_toRightOf="@id/center_divider_inner_bottom"
                    android:background="@drawable/linear_layout_shadow"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:padding="10dp"
                        android:tint="@color/colorPrimary"
                        app:srcCompat="@drawable/ic_live_help_black_24dp" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1.5"
                        android:gravity="center"
                        android:text="@string/need_help"
                        android:layout_marginBottom="3dp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="13sp" />

                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>

        <!--Weight 1-->
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />



    </LinearLayout>

</RelativeLayout>